# Asteroids

./: AGENTS.md  README.md  assets.py  asteroid.py  asteroidfield.py  audio_manager.py  bomb_pickup.py  bomb_wave.py  circleshape.py  constants.py  fx_manager.py  game_clock.py  game_state.py  glow.py  hud.py  hud_icons.py  level_manager.py  main.py  player.py  profile_manager.py  pyproject.toml  run_summary.py  score_manager.py  screen_shake.py  state_manager.py  utils.py
docs/: asset_pipeline.md  design_plan.md  neon_rendering.md  plan.md  sequence_plan.md  style_guide.md
save/: profile.json
tests/: conftest.py  test_audio_manager.py  test_bomb_pickup.py  test_bomb_wave.py  test_fx_manager.py  test_game_clock.py  test_game_state.py  test_hud.py  test_level_manager.py  test_profile_manager.py  test_profile_manager_migration.py  test_profile_manager_milestones.py  test_profile_manager_settings.py  test_score_manager.py
tools/: generate_mockups.py
